WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12223
REGRESSION: Leaks under CSSStyleSelector::applyProperty
https://bugs.webkit.org/show_bug.cgi?id=12223
Summary
REGRESSION: Leaks under CSSStyleSelector::applyProperty
mitz
Reported
2007-01-12 08:36:43 PST
Patch coming shortly.
Attachments
Fix box shadow data leak
(1.48 KB, patch)
2007-01-12 08:49 PST
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-01-12 08:49:37 PST
Created
attachment 12386
[details]
Fix box shadow data leak
Darin Adler
Comment 2
2007-01-12 10:15:48 PST
Comment on
attachment 12386
[details]
Fix box shadow data leak Nice! r=me
David Kilzer (:ddkilzer)
Comment 3
2007-01-12 13:27:44 PST
Committed revision 18810.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug