WebCore:

Reviewed by Darin.  Patch by Mitz.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12223
          REGRESSION: Leaks under CSSStyleSelector::applyProperty

        No test possible (no change to functionality).

        * rendering/RenderObject.h: Removed unused forward declaration.
        * rendering/RenderStyle.cpp:
        (WebCore::StyleRareNonInheritedData::~StyleRareNonInheritedData):
        Delete shadow data.



Canonical link: https://commits.webkit.org/15818@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18810 268f45cc-cd09-0410-ab3c-d52691b4dbfc